# Jeriya

./: .gitattributes  .gitignore  Cargo.toml  README.md  codecov.ps1  compile_shaders.ps1  push.ps1  run_jobs.ps1
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  codecov.yml  doc.yml  examples.rs  examples.yml  fmt.yml  main.yml  rust.yml  test.yml
docs/: Release.md
jeriya/: Cargo.toml
jeriya/examples/: basic.rs  content.rs  rotated_cube.glb
jeriya/src/: backend.rs  lib.rs  objects.rs  renderer.rs  resources.rs
jeriya/src/resources/: camera.rs  static_mesh.rs
jeriya/tests/: lib.rs
jeriya_ash/: Cargo.toml
jeriya_ash/src/: lib.rs
jeriya_backend/: Cargo.toml
jeriya_backend/src/: backend.rs  camera.rs  elements.rs  gpu_index_allocator.rs  immediate.rs  instances.rs  lib.rs  objects.rs  resources.rs  transactions.rs
jeriya_backend_ash/: Cargo.toml
jeriya_backend_ash/src/: ash_backend.rs  ash_immediate.rs  ash_immediate_rendering_backend.rs  ash_objects.rs  ash_shared_backend.rs  backend_shared.rs  buffer.rs  command_buffer_builder.rs  compiled_frame_graph.rs  compute_pipeline.rs  debug.rs  debug_label_guard.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_visible_buffer.rs  entry.rs  fence.rs  frame.rs  frame_index.rs  frame_local_buffer.rs  graphics_pipeline.rs  instance.rs  lib.rs  page_buffer.rs  persistent_frame_state.rs  physical_device.rs  pipeline_factory.rs  presenter.rs  presenter_resources.rs  presenter_shared.rs  presenter_thread.rs  queue.rs  queue_plan.rs  queue_scheduler.rs  shader_interface.rs  shader_module.rs  specialization_constants.rs  staged_push_only_buffer.rs  surface.rs  (+7 more)
jeriya_backend_ash/test_data/: color.frag  color.frag.spv  cull_point_cloud_clusters.comp  cull_point_cloud_instances.comp.spv  cull_rigid_mesh_instances.comp  cull_rigid_mesh_instances.comp.spv  cull_rigid_mesh_meshlets.comp  cull_rigid_mesh_meshlets.comp.spv  device_local_debug_line.frag  frame_telemetry.comp  indirect_meshlet.frag.spv  indirect_simple.frag.spv  indirect_simple.vert.spv  point_cloud.vert.spv  point_cloud_cluster.frag  point_cloud_cluster.frag.spv  point_cloud_cluster.vert.spv  red_triangle.frag  red_triangle.vert  red_triangle.vert.spv
jeriya_backend_ash_base/: Cargo.toml
jeriya_backend_ash_base/src/: buffer.rs  command_buffer.rs  command_buffer_builder.rs  command_pool.rs  compute_pipeline.rs  cull_compute_pipeline.rs  debug.rs  descriptor.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_visible_buffer.rs  fence.rs  frame_index.rs  frame_local_buffer.rs  graphics_pipeline.rs  host_visible_buffer.rs  immediate_graphics_pipeline.rs  indirect_graphics_pipeline.rs  instance.rs  lib.rs  page_buffer.rs  physical_device.rs  push_descriptors.rs  queue.rs  queue_plan.rs  queue_selection.rs  semaphore.rs  shader_interface.rs  shader_module.rs  simple_graphics_pipeline.rs  specialization_constants.rs  staged_push_only_buffer.rs  swapchain.rs  swapchain_depth_buffer.rs  swapchain_framebuffers.rs  swapchain_render_pass.rs  swapchain_vec.rs  unsafe_buffer.rs
jeriya_backend_ash_base/test_data/: color.frag  color.frag.spv  color.vert  color.vert.spv  cull.comp  cull.comp.spv  cull_point_cloud_clusters.comp  cull_point_cloud_clusters.comp.spv  cull_point_cloud_instances.comp  cull_point_cloud_instances.comp.spv  cull_rigid_mesh_instances.comp  cull_rigid_mesh_instances.comp.spv  cull_rigid_mesh_meshlets.comp  cull_rigid_mesh_meshlets.comp.spv  device_local_debug_line.frag  device_local_debug_line.frag.spv  device_local_debug_line.vert  device_local_debug_line.vert.spv  frame_telemetry.comp  frame_telemetry.comp.spv  indirect.frag  indirect.frag.spv  indirect.vert  indirect.vert.spv  indirect_meshlet.frag  indirect_meshlet.frag.spv  indirect_meshlet.vert  indirect_meshlet.vert.spv  indirect_simple.frag  indirect_simple.vert  indirect_simple.vert.spv  point_cloud.frag  point_cloud.frag.spv  point_cloud.vert  point_cloud.vert.spv  point_cloud_cluster.frag  point_cloud_cluster.frag.spv  point_cloud_cluster.vert  point_cloud_cluster.vert.spv  red_triangle.vert.spv
jeriya_backend_ash_core/: Cargo.toml
jeriya_backend_ash_core/src/: buffer.rs  command_buffer.rs  command_buffer_builder.rs  command_pool.rs  debug.rs  depth_buffer.rs  descriptor.rs  descriptor_pool.rs  descriptor_set_layout.rs  device.rs  device_visible_buffer.rs  fence.rs  frame_index.rs  graphics_pipeline.rs  host_visible_buffer.rs  immediate_graphics_pipeline.rs  lib.rs  physical_device.rs  push_descriptors.rs  queue.rs  semaphore.rs  shader_interface.rs  simple_graphics_pipeline.rs  swapchain.rs  swapchain_depth_buffer.rs  swapchain_framebuffers.rs  swapchain_render_pass.rs  swapchain_renderpass.rs  swapchain_vec.rs  unsafe_buffer.rs
jeriya_backend_ash_core/test_data/: color.frag  color.frag.spv  color.vert  color.vert.spv  (+1 more)
jeriya_content/: Cargo.toml
jeriya_content/expected_results/: rotated_cube.mtl  suzanne_meshlets.mtl  suzanne_simple_mesh.mtl
jeriya_content/src/: assert_importer.rs  assert_processor.rs  asset_file.rs  asset_importer.rs  asset_processor.rs  common.rs  importer.rs  lib.rs  model.rs  point_cloud.rs  processor.rs  read_asset.rs  shader.rs
jeriya_content/src/point_cloud/: bounding_box.rs  cluster_graph.rs  cluster_hash_grid.rs  clustered_point_cloud.rs  point_clustering_hash_grid.rs  point_clustering_octree.rs  simple_point_cloud.rs
jeriya_macros/: Cargo.toml
jeriya_shared/: Cargo.toml
jeriya_shared/src/: aabb.rs  backend.rs  bounding_box.rs  camera.rs  debug_info.rs  event_queue.rs  immediate.rs  indexing_container.rs  lib.rs  obj_writer.rs  objects.rs  resources.rs
jeriya_shared/src/objects/: inanimate_mesh_instance.rs
jeriya_shared/src/resources/: inanimate_mesh.rs  texture2d.rs
jeriya_test/: Cargo.toml
jeriya_tool/: Cargo.toml
jeriya_tool/src/: main.rs
jeriya_viewer/: Cargo.toml
jeriya_viewer/src/: camera_controller.rs  main.rs  scene.rs  scene_description.rs  scene_loading.rs
sample_assets/: armadillo.glb  suzanne.glb  test_scene.yaml
tools/: color_generator.py
(+34 files in other folders)
