[package]
name = "jeriya"
version = "0.1.0"
edition = "2021"

[dependencies]
jeriya_shared = { path = "../jeriya_shared" }

[dev-dependencies]
jeriya_test = { path = "../jeriya_test" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_backend_ash = { path = "../jeriya_backend_ash" }
jeriya_content = { path = "../jeriya_content" }
fern = "0.6.1"
spin_sleep = "1.1.1"
gltf = "1.2.0"
