[package]
name = "jeriya"
version = "0.3.0"
edition = "2021"

[features]
deadlock_detection = ["jeriya_shared/deadlock_detection"]

[dependencies]
jeriya_shared = { path = "../jeriya_shared" }
jeriya_backend = { path = "../jeriya_backend" }
doc-comment = "0.3.3"

[dev-dependencies]
jeriya_test = { path = "../jeriya_test" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_backend_ash = { path = "../jeriya_backend_ash" }
jeriya_content = { path = "../jeriya_content" }
fern = "0.6.1"
spin_sleep = "1.1.1"
gltf = "1.2.0"
