[package]
name = "jeriya_backend_ash"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[dependencies]
jeriya = { path = "../jeriya" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_test = { path = "../jeriya_test" }
thiserror = "1.0.40"
ash = "0.37.2+1.3.238"
lazy_static = "1.4.0"

[features]
ignore_in_ci = []