[package]
name = "jeriya_backend_ash"
version = "0.1.0"
edition = "2021"

[dependencies]
jeriya_backend_ash_base = { path = "../jeriya_backend_ash_base" }
jeriya_test = { path = "../jeriya_test" }
jeriya = { path = "../jeriya" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_macros = { path = "../jeriya_macros" }
jeriya_backend = { path = "../jeriya_backend" }