[package]
name = "jeriya_backend_ash_base"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[dependencies]
jeriya_test = { path = "../jeriya_test" }
jeriya = { path = "../jeriya" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_backend = { path = "../jeriya_backend" }
jeriya_macros = { path = "../jeriya_macros" }
jeriya_content = { path = "../jeriya_content" }
ash = "0.37"
lazy_static = "1.4.0"
raw-window-handle = "0.5"
