[package]
name = "jeriya_content"
version = "0.6.0"
edition = "2021"

[dependencies]
jeriya_shared = { path = "../jeriya_shared" }
jeriya_test = { path = "../jeriya_test" }
notify-debouncer-full = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
meshopt = "0.1.9"
gltf = "1.4.0"
bincode = "1.3.3"

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "*"
