[package]
name = "jeriya_shared"
version = "0.1.0"
edition = "2021"

[features]
profile = ["tracy-client/default"]

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
parking_lot = "0.12.1"
winit = "0.28.3"
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
nalgebra-glm = "0.18.0"
bitflags = "2.1.0"
derive_more = "0.99.17"
bumpalo = "3.13.0"
byteorder = "1.4.3"
thiserror = "1.0.40"
byte-unit = "4.0.19"
crossbeam-channel = "0.5.8"
async-trait = "0.1.72"
rayon = "1.7.0"
pathdiff = "0.2.1"
indoc = "2.0.3"
walkdir = "2.3.3"
rand = "0.8.5"
bus = "2.4.1"
derive-new = "0.5.9"
spin_sleep = "1.1.1"
thread-id = "4.2.0"

# see https://crates.io/crates/tracy-client for version support table
tracy-client = { version = "0.14.2", default-features = false }
