[package]
name = "jeriya_shared"
version = "0.6.0"
edition = "2021"

[features]
default = []
# Assertions in performance critical code are activated
assertions = []
# Labeling of Vulkan objects and command buffers is activated
labeling = []
profile = ["tracy-client/default"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[dependencies]
# see https://crates.io/crates/tracy-client for version support table
tracy-client = { version = "0.16", default-features = false }
chrono = "0.4.34"
log = "0.4.20"
parking_lot = "0.12.1"
winit = "0.29"
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
nalgebra-glm = "0.18.0"
bitflags = "2.4.2"
derive_more = "0.99.17"
bumpalo = "3.15.3"
byteorder = "1.5.0"
thiserror = "1.0.57"
byte-unit = "5"
crossbeam-channel = "0.5.11"
async-trait = "0.1.77"
rayon = "1.8.1"
pathdiff = "0.2.1"
indoc = "2.0.4"
walkdir = "2.4.0"
rand = "0.8.5"
bus = "2.4.1"
derive-new = "0.6"
spin_sleep = "1.2.0"
spin_sleep_util = "0.1.0"
thread-id = "4.2.1"
itertools = "0.12.1"
maplit = "1.0.2"
derive-where = "1.2.7"
serde = { version = "1.0.197", features = ["derive"] }
float-cmp = "0.9.0"
num_cpus = "1"
kdtree = "0.7"
plotters = "0.3"
colors-transform = "0.2"
serde_json = "1"
raw-window-handle = "0.6"
ahash = "0.8.10"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4"] }
