[package]
name = "jeriya_tool"
version = "0.6.0"
edition = "2021"

[features]
default = [
    "jeriya_shared/assertions",
    "jeriya_shared/deadlock_detection",
]

[dependencies]
jeriya_shared = { path = "../jeriya_shared" }
jeriya_content = { path = "../jeriya_content" }
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
fern = "0.6.2"
