[package]
name = "jeriya_viewer"
version = "0.4.0"
edition = "2021"

[features]
default = [
    "jeriya_shared/assertions",
    "jeriya_shared/deadlock_detection",
]

[dependencies]
jeriya = { path = "../jeriya" }
jeriya_test = { path = "../jeriya_test" }
jeriya_shared = { path = "../jeriya_shared" }
jeriya_backend = { path = "../jeriya_backend" }
jeriya_backend_ash = { path = "../jeriya_backend_ash" }
jeriya_content = { path = "../jeriya_content" }
fern = "0.6.1"
color-eyre = "0.6.2"
gltf = "1.2.0"
clap = { version = "4", features = ["derive"] }
